result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: result
  name: result
  namespace: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      - image: 950274644703.dkr.ecr.ap-northeast-2.amazonaws.com/ecr:result
        name: result
        ports:
        - containerPort: 80
          name: result
