vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote
  name: vote
  namespace: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - image: 950274644703.dkr.ecr.ap-northeast-2.amazonaws.com/voting-app-repo:vote
        imagePullPolicy: Always
        name: vote
        ports:
        - containerPort: 80
          name: vote
        resources:
          limits:
            cpu: 300m
            memory: 500Mi
          requests:
            cpu: 300m
            memory: 500Mi
