worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: worker
  name: worker
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - image: 950274644703.dkr.ecr.ap-northeast-2.amazonaws.com/voting-app-repo:worker
        imagePullPolicy: Always
        name: worker
